# TK-OPS-ASSISTANT-new

./: .gitignore  .tmp_candidate.js  AGENTS.md  CLAUDE.md  README.md  alembic.ini  build.py  build_exe.bat  file_version_info.txt  installer.iss  issue_license.bat  polish_ui.py  pyproject.toml  requirements.txt  run_tests_win.bat  tk_ops.spec
.sisyphus/: boulder.json
.tmp_runtime/: tk_ops.db-shm  tk_ops.db-wal
apps/py-runtime/: pyproject.toml
apps/py-runtime/src/: main.py
apps/py-runtime/src/api/common/: session.py
apps/py-runtime/src/api/http/accounts/: routes.py
apps/py-runtime/src/api/http/assistant/: routes.py
apps/py-runtime/src/api/http/common/: auth.py  envelope.py
apps/py-runtime/src/api/http/copywriter/: routes.py
apps/py-runtime/src/api/http/dashboard/: routes.py
apps/py-runtime/src/api/http/health/: routes.py
apps/py-runtime/src/api/http/license/: routes.py
apps/py-runtime/src/api/http/notifications/: routes.py
apps/py-runtime/src/api/http/providers/: routes.py
apps/py-runtime/src/api/http/scheduler/: routes.py
apps/py-runtime/src/api/http/settings/: routes.py
apps/py-runtime/src/api/http/tasks/: routes.py
apps/py-runtime/src/api/http/version/: routes.py
apps/py-runtime/src/api/ws/: copywriter.py  runtime_status.py  ws_common.py
apps/py-runtime/src/bootstrap/: app_factory.py  container.py  logging.py  settings.py
apps/py-runtime/src/legacy_adapter/: README.md  facade.py  serializers.py
desktop_app/: REFERENCE_ONLY.md  __init__.py  app.py  cli_mvp.py  db.py  logging_config.py  main.py  models.py  requirements.txt  (+1 more)
(+475 files in other folders)
