[project]
name = "tk-ops-py-runtime"
version = "0.1.0"
description = "Python sidecar runtime for TK-OPS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.34,<1.0",
    "sqlalchemy>=2.0,<2.1",
    "pydantic>=2.12,<3.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"